--- a/css/forside.css
+++ b/css/forside.css
@@ -384,7 +384,7 @@
 	}
 
 	.text-button-products h2 {
-		padding: 2% 3%;
+		padding: 6% 3%;
 		color: #101010;
 		text-align: center;
 		font-family: "Inter";
@@ -439,7 +439,7 @@
 		line-height: 133%; /* 1.33rem */
 		letter-spacing: -0.02rem;
 		text-decoration: none;
-		margin-bottom: 6%;
+		margin-bottom: 80px;
 	}
 
 	.product-row {
